updated readme with stack setup details

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 https://www.youtube.com/watch?v=ybba5tcOeEY&index=2&list=TLkutMh4RcPOEyMjA0MjAxN://www.youtube.com/watch?v=ybba5tcOeEY&index=2&list=TLkutMh4RcPOEyMjA0MjAxNg
+
+setting up the project using stack 1.0.4.3 (LTS 5.13)
+
+created a project at gitlab.com https://gitlab.com/chandrakoduru/haskell-bartosz
+
+stack new haskell-bartosz
